--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,8 @@
     "bootstrap": "^3.3.7",
     "angular": "^1.5.8",
     "angular-route": "^1.5.8"
+  },
+  "dependencies": {
+    "font-awesome": "fontawesome#^4.6.3"
   }
 }
